k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starbucks-frontend
  labels:
    app: starbucks
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starbucks
      tier: frontend
  template:
    metadata:
      labels:
        app: starbucks
        tier: frontend
    spec:
      containers:
      - name: starbucks-app
        image: samiatbakare/starbucks-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
